terraform/networking/security_groups.tf
resource "aws_security_group" "endpoint_sg" {
  vpc_id = aws_vpc.main.id

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["10.0.0.0/16"] # internal traffic
  }
}

vpc_endpoint_sg_ids = [aws_security_group.endpoint_sg.id]
