terraform/networking/vpc.tf
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id
}

route_table_ids = [aws_route_table.private.id]

resource "aws_subnet" "private_1" {
  vpc_id = aws_vpc.main.id
  cidr_block = "10.0.1.0/24"
}

vpc_subnet_ids = [
  aws_subnet.private_1.id
]
